2022-09-14T16:17:48Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3054389699
* notice: last 14d: unq all: 4 11
* notice: prev accum: outdated-unq outdated-all / unq all: 35 112 / 40 124
* notice: next accum: outdated-unq outdated-all / unq all: 36 113 / 40 124
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-31] / []

2022-09-11T01:13:56Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3030076185
* notice: last 14d: unq all: 5 12
* notice: prev accum: outdated-unq outdated-all / unq all: 35 112 / 39 123
* notice: next accum: outdated-unq outdated-all / unq all: 35 112 / 40 124
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-10]

2022-09-08T16:17:24Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3016645770
* notice: last 14d: unq all: 4 11
* notice: prev accum: outdated-unq outdated-all / unq all: 35 112 / 38 120
* notice: next accum: outdated-unq outdated-all / unq all: 35 112 / 39 123
* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [] / [2022-09-08]

2022-09-07T16:16:26Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3009159835
* notice: last 14d: unq all: 3 8
* notice: prev accum: outdated-unq outdated-all / unq all: 34 110 / 38 120
* notice: next accum: outdated-unq outdated-all / unq all: 35 112 / 38 120
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-24] / []

2022-09-07T08:18:13Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3006070779
* notice: last 14d: unq all: 4 10