@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-14T16:17:48Z",
-  "count_outdated" : 113,
-  "uniques_outdated" : 36,
+  "timestamp" : "2022-09-19T01:14:07Z",
+  "count_outdated" : 114,
+  "uniques_outdated" : 37,
   "count" : 124,
   "uniques" : 40,
   "views" : [
-    {
-      "timestamp": "2022-09-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-07T00:00:00Z",
       "count": 6,
