@@ -1,12 +1,7 @@
 {
-  "count": 11,
-  "uniques": 4,
+  "count": 10,
+  "uniques": 3,
   "views": [
-    {
-      "timestamp": "2022-09-04T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-09-07T00:00:00Z",
       "count": 6,
