@@ -1,3 +1,11 @@
+2022-09-19T01:14:07Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3079329719
+* notice: last 14d: unq all: 3 10
+* notice: prev accum: outdated-unq outdated-all / unq all: 36 113 / 40 124
+* notice: next accum: outdated-unq outdated-all / unq all: 37 114 / 40 124
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-04] / []
+
 2022-09-14T16:17:48Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3054389699
 * notice: last 14d: unq all: 4 11
